# m2dev-client-src

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/AudioLib/: CMakeLists.txt  MaSoundInstance.cpp  MaSoundInstance.h  SoundEngine.cpp  SoundEngine.h  Stdafx.h  Type.cpp  Type.h
src/CWebBrowser/: CMakeLists.txt  CWebBrowser.c  CWebBrowser.h
src/Discord/: CMakeLists.txt  discord_register_win.cpp
src/EffectLib/: CMakeLists.txt  EffectData.cpp  EffectData.h  EffectElementBase.cpp  EffectElementBaseInstance.cpp  EffectInstance.cpp  EffectInstance.h  EffectManager.cpp  EffectManager.h  EffectMesh.cpp  EffectMesh.h  EffectMeshInstance.cpp  EffectMeshInstance.h  EmitterProperty.cpp  ParticleInstance.cpp  ParticleInstance.h  ParticleProperty.cpp  ParticleProperty.h  ParticleSystemData.cpp  ParticleSystemData.h  ParticleSystemInstance.cpp  ParticleSystemInstance.h  SimpleLightData.cpp  SimpleLightData.h  SimpleLightInstance.cpp  SimpleLightInstance.h  StdAfx.h  Type.h
src/EterBase/: CMakeLists.txt  CPostIt.cpp  CPostIt.h  Debug.cpp  Debug.h  FileDir.cpp  FileLoader.cpp  FileLoader.h  MappedFile.cpp  Singleton.h  StdAfx.h  Timer.cpp  Utils.cpp  Utils.h  cipher.cpp  cipher.h  error.cpp  lzo.cpp  lzo.h  tea.cpp
src/EterGrnLib/: CMakeLists.txt  Deform.cpp  Deform.h  LODController.cpp  LODController.h  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelInstanceCollisionDetection.cpp  ModelInstanceModel.cpp  ModelInstanceMotion.cpp  ModelInstanceRender.cpp  ModelInstanceUpdate.cpp  StdAfx.h  Thing.cpp  ThingInstance.cpp  ThingInstance.h
src/EterImageLib/: CMakeLists.txt  DDSTextureLoader9.cpp  DXTCImage.cpp  Image.h  STBImageImplementation.cpp  StdAfx.h  TGAImage.cpp
src/EterLib/: AttributeData.cpp  AttributeInstance.cpp  AttributeInstance.h  BlockTexture.cpp  CMakeLists.txt  Camera.cpp  Camera.h  CollisionData.cpp  ColorTransitionHelper.h  CullingManager.cpp  CullingManager.h  Decal.cpp  Decal.h  DibBar.cpp  FileLoaderThread.cpp  FileLoaderThread.h  GrpBase.cpp  GrpBase.h  GrpCollisionObject.h  GrpColorInstance.cpp  GrpD3DXBuffer.cpp  GrpDetector.cpp  GrpDevice.cpp  GrpDevice.h  GrpExpandedImageInstance.cpp  GrpFontTexture.cpp  GrpImage.cpp  GrpImageInstance.cpp  GrpImageTexture.cpp  GrpImageTexture.h  GrpIndexBuffer.cpp  GrpIndexBuffer.h  GrpLightManager.cpp  GrpLightManager.h  GrpMarkInstance.cpp  GrpObjectInstance.cpp  GrpPixelShader.cpp  GrpPixelShader.h  GrpRatioInstance.cpp  GrpScreen.cpp  (+45 more)
src/EterLocale/: Arabic.cpp  CMakeLists.txt  StdAfx.h
src/EterPack/: CMakeLists.txt  EterPack.cpp  EterPack.h  EterPackCursor.cpp  EterPackManager.cpp  EterPackManager.h  EterPackPolicy_CSHybridCrypt.cpp  EterPackPolicy_CSHybridCrypt.h  StdAfx.h
src/EterPythonLib/: CMakeLists.txt  PythonGraphic.cpp  PythonGraphic.h  PythonGraphicImageModule.cpp  PythonGraphicModule.cpp  PythonGraphicTextModule.cpp  PythonGraphicThingModule.cpp  PythonGridSlotWindow.cpp  PythonSlotWindow.cpp  PythonSlotWindow.h  PythonWindow.cpp  PythonWindow.h  PythonWindowManager.cpp  PythonWindowManagerModule.cpp  StdAfx.h
src/GameLib/: ActorInstance.cpp  ActorInstance.h  ActorInstanceAttach.cpp  ActorInstanceBattle.cpp  ActorInstanceCollisionDetection.cpp  ActorInstanceData.cpp  ActorInstanceFly.cpp  ActorInstanceInterface.h  ActorInstanceMotion.cpp  ActorInstanceMotionEvent.cpp  ActorInstanceRender.cpp  ActorInstanceRotation.cpp  Area.cpp  Area.h  AreaLoaderThread.cpp  AreaLoaderThread.h  AreaTerrain.cpp  AreaTerrain.h  CMakeLists.txt  DungeonBlock.cpp  DungeonBlock.h  FlyTrace.cpp  FlyTrace.h  FlyingData.cpp  FlyingInstance.cpp  FlyingInstance.h  GameEventManager.h  GameType.cpp  GameType.h  GameUtil.cpp  Interface.h  ItemData.cpp  ItemData.h  ItemManager.cpp  MapBase.cpp  MapBase.h  MapManager.cpp  MapManager.h  MapOutdoor.cpp  MapOutdoor.h  (+37 more)
src/MilesLib/: CMakeLists.txt  MSSFileAPI.cpp  MSSFileAPI.hpp  MusicInstance.hpp  SampleFile.cpp  SampleFile.hpp  SampleFileCache.cpp  SampleFileCache.hpp  SoundManager.cpp  SoundManager.h  (+6 more)
(+158 files in other folders)
