add_subdirectory(AudioLib)
add_subdirectory(Discord)
add_subdirectory(EffectLib)
add_subdirectory(EterBase)
add_subdirectory(EterGrnLib)
add_subdirectory(EterImageLib)
add_subdirectory(EterLib)
add_subdirectory(EterLocale)
add_subdirectory(EterPack)
add_subdirectory(EterPythonLib)
add_subdirectory(GameLib)
add_subdirectory(PRTerrainLib)
add_subdirectory(ScriptLib)
add_subdirectory(SpeedTreeLib)
add_subdirectory(SphereLib)
add_subdirectory(UserInterface)
add_subdirectory(PackMaker)
